--- a/app/Resources/views/Curso/detalle.html.twig
+++ b/app/Resources/views/Curso/detalle.html.twig
@@ -3,8 +3,8 @@
            <td colspan="4"><h4>{{entity.curso.id}} - {{ entity.curso.nombre }} - {{entity.periodo}} </h4></td>
             <tr>
                 <td>Director: {{entity.director.user.nombres}} {{entity.director.user.apellidos}}
-                {% if is_granted('ROLE_ADMIN') %}
-                 <a href="{{ path('oferta_edit', {'id': entity.id }) }}" class="btn btn-success btn-xs"> <i class="fa fa-edit"></i></a>
+                {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_LP') %}
+                 <a href="{{ path('oferta_edit', {'id': entity.id }) }}" class="btn btn-success btn-xs">Editar Director <i class="fa fa-edit"></i></a>
                     {%endif%}
                 </td>
                 <td>Programa: {{ entity.curso.programa? entity.curso.programa.nombre : 'Sin' }} - {{ entity.curso.escuela }}</td>
