fix porgramas-cursos 2

--- a/app/Resources/views/Curso/lider.html.twig
+++ b/app/Resources/views/Curso/lider.html.twig
@@ -52,7 +52,7 @@
                    -->
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                            <h2>Cursos ofertados en el periodo {{ periodoa.nombre }}</h2>
+                            <h2>Cursos ofertados en el periodo {{ periodoe.observaciones }}</h2>
                     </header>
 
                     <!-- widget div-->
