--- a/src/AppBundle/Resources/views/User/info.html.twig
+++ b/src/AppBundle/Resources/views/User/info.html.twig
@@ -25,6 +25,10 @@
                 <th>DID</th>
                 <td>{{ app.session.get('docenteid') }}</td>
             </tr>
+            <tr>
+                <th>UA</th>
+                <td>{{ app.session.get('escuelaid') }}</td>
+            </tr>
         </tbody>
     </table>
 {% endblock %}
