--- a/app/Resources/views/Docente/detalle.html.twig
+++ b/app/Resources/views/Docente/detalle.html.twig
@@ -1,4 +1,4 @@
-<h4>1. Información de vinculación</h4>
+<h4>Información de vinculación</h4>
 <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
     <tr>
         <th>Nombre</th>
