--- a/app/Resources/views/Docente/show.html.twig
+++ b/app/Resources/views/Docente/show.html.twig
@@ -13,7 +13,7 @@
         </ul>
     {% endif %}
 
-    <h4>3. Instrumentos de Evaluación</h4>
+    <h4>Instrumentos de Evaluación</h4>
     <table class="table table-bordered hidden-mobile" style="width: 95%">
         <tr>
             <th>Instrumento</th>
@@ -182,7 +182,7 @@
         {% endfor %}
     </table>
 
-    <h4>4. Resultados</h4>
+    <h4>Resultados</h4>
     <table class="table table-bordered hidden-mobile" style="width: 95%">
         <tr>
             <th>
