listado de cursos

--- a/app/Resources/views/Curso/lider.html.twig
+++ b/app/Resources/views/Curso/lider.html.twig
@@ -37,22 +37,11 @@
             <!-- NEW WIDGET START -->
             <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <!-- Widget ID (each widget will need unique ID)-->
-                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoe }}"
+                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoe.id }}"
                      data-widget-editbutton="false" data-widget-deletebutton="false">
-                    <!-- widget options:
-                    usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-                   data-widget-colorbutton="false"
-                   data-widget-editbutton="false"
-                   data-widget-togglebutton="false"
-                   data-widget-deletebutton="false"
-                   data-widget-fullscreenbutton="false"
-                   data-widget-custombutton="false"
-                   data-widget-collapsed="true"
-                   data-widget-sortable="false"
-                   -->
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                            <h2>Cursos ofertados en el periodo {{ periodoa.nombre }}</h2>
+                            <h2>    Cursos ofertados en el periodo {{ periodoa.nombre }}</h2>
                     </header>
 
                     <!-- widget div-->
@@ -73,7 +62,7 @@
                                     <th>Curso</th>
                                     <th>Programa</th>
                                     <th>Director</th>
-                                    <th>Actions</th>
+                                    <th>Editar</th>
                                 </tr>
                                 </thead>
                                 <tbody>
