listado de cursos id

--- a/app/Resources/views/Curso/lider.html.twig
+++ b/app/Resources/views/Curso/lider.html.twig
@@ -37,7 +37,7 @@
             <!-- NEW WIDGET START -->
             <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <!-- Widget ID (each widget will need unique ID)-->
-                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoe.id }}"
+                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoa.id }}"
                      data-widget-editbutton="false" data-widget-deletebutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
