confirmar roles add director rol

--- a/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
@@ -111,7 +111,11 @@
                 2. Director
             </td>
             <td>
-                Agregar Rol de Director para autoevaluación  <b>SOLAMENTE</b> en caso que usted desempeño el rol y no esta en el anterior listado.
+                Si usted fue director(a) de curso debe solicitar al líder de programa que la asigne como director(a) (16-05) al cursos o cursos que corresponda con esto se habilita:<br>
+                * Rol de director para autoevaluación.<br>
+                * Coevaluación del líder a director.<br>
+                * Coevaluación del director a los tutores.<br>
+                * Coevaluación del tutor al director.<br>
             </td>
             <td>
 
