--- a/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
+++ b/src/Admin/MedBundle/Resources/views/Plangestion/conf.html.twig
@@ -111,7 +111,7 @@
                 2. Director
             </td>
             <td>
-                Si usted fue director(a) de curso debe solicitar al líder de programa que la asigne como director(a) (16-05) al cursos o cursos que corresponda con esto se habilita:<br>
+                Si usted fue director(a) de curso debe solicitar al líder de programa que la asigne como director(a) al cursos o cursos que corresponda con esto se habilita:<br>
                 * Rol de director para autoevaluación.<br>
                 * Coevaluación del líder a director.<br>
                 * Coevaluación del director a los tutores.<br>
