--- a/templates/Default/passmed.html.twig
+++ b/templates/Default/passmed.html.twig
@@ -99,7 +99,7 @@
                                     <form method="POST" id="checkout-form" class="smart-form" novalidate="novalidate" method="POST" action="{{path('home_pass2')}}" {{ form_start(form) }}
 
                                         <div id="form_body">
-                                            {% include 'AppBundle:Default:passform.html.twig' with {'form': form} %}
+                                            {% include 'App:Default:passform.html.twig' with {'form': form} %}
                                         </div>
                                         <footer>
                                             <button type="submit" class="btn btn-primary">Enviar</button>
