delete @template programac

--- a/templates/Programa/porperiodo.html.twig
+++ b/templates/Programa/porperiodo.html.twig
@@ -54,7 +54,7 @@
                       <td>{{ entity.programa.nivel }}</td>
                 <td>{{ entity.programa.nombre }}</td>
                 <td>{{ entity.programa.escuela? entity.programa.escuela.sigla : 'sin' }}</td>
-                <td>{{ entity.lider? entity.lider.usurio.nombres : 'sin' }}</td>
+                <td>{{ entity.lider? entity.id : 'sin' }}</td>
 
 
             </tr>
