--- a/templates/Archivo/pordoc.html.twig
+++ b/templates/Archivo/pordoc.html.twig
@@ -1,7 +1,7 @@
 {% extends '/base.html.twig' %}
 
 {% block body -%}
-    <h1>Archivo de evaluaciones recibidas en periodos anteriores</h1>
+    <h1>Archivo de evaluaciones recibidas</h1>
 
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
         <thead>
