select lider popup

--- a/templates/Docente/inicio-dc.html.twig
+++ b/templates/Docente/inicio-dc.html.twig
@@ -138,7 +138,7 @@
             <th>
                 Coevaluación - Terna de Pares
             </th>
-            <td>Evaluación de la terna a los pares acádemicos</td>
+            <td>Evaluación de la terna a los pares académicos</td>
             <td>
                 {% if instrumentos[6].estado %}
                     <a href="{{ path('docente_coevalpares') }}" class="btn btn-primary btn-xs">Ingresar <i
