--- a/templates/Programa/addlider.html.twig
+++ b/templates/Programa/addlider.html.twig
@@ -1,4 +1,4 @@
-{% extends '::basepop.html.twig' %}
+{% extends '/basepop.html.twig' %}
 {% block body -%}
   <!-- NEW WIDGET START -->
 		<article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
