--- a/templates/Security/login.html.twig
+++ b/templates/Security/login.html.twig
@@ -1,227 +1,233 @@
 <!DOCTYPE html>
-	<head>
-		<meta charset="utf-8">
-		<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
+<head>
+    <meta charset="utf-8">
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
 
-		<title>SIGA MED V2 - Login </title>
-		<meta name="description" content="">
-		<meta name="author" content="">
+    <title>SIGA MED V2 - Login </title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-		<!-- Use the correct meta names below for your web application
-			 Ref: http://davidbcalhoun.com/2010/viewport-metatag 
-			 
-		<meta name="HandheldFriendly" content="True">
-		<meta name="MobileOptimized" content="320">-->
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- Use the correct meta names below for your web application
+         Ref: http://davidbcalhoun.com/2010/viewport-metatag
 
-		<!-- Basic Styles -->
-		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">	
-		<link rel="stylesheet" type="text/css" media="screen" href="css/font-awesome.min.css">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">-->
 
-		<!-- SmartAdmin Styles : Please note (smartadmin-production.css) was created using LESS variables -->
-		<link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-production.css">
-		<link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-skins.css">	
-		
-		<!-- SmartAdmin RTL Support is under construction
-			<link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-rtl.css"> -->
-		
-		<!-- Demo purpose only: goes with demo.js, you can delete this css when designing your own WebApp -->
-		<link rel="stylesheet" type="text/css" media="screen" href="css/demo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<!-- FAVICONS -->
-		<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
+    <!-- Basic Styles -->
+    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/font-awesome.min.css">
 
-		<!-- GOOGLE FONT
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,400,700">-->
+    <!-- SmartAdmin Styles : Please note (smartadmin-production.css) was created using LESS variables -->
+    <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-production.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-skins.css">
 
-	</head>
-	<body id="login" class="animated fadeInDown">
-		<!-- possible classes: minified, no-right-panel, fixed-ribbon, fixed-header, fixed-width-->
-		<header id="header">
-			<!--<span id="logo"></span>-->
+    <!-- SmartAdmin RTL Support is under construction
+        <link rel="stylesheet" type="text/css" media="screen" href="css/smartadmin-rtl.css"> -->
 
-			<div id="logo-group">
-                        <span id="logo"> <img src="img/logoUNAD.png" style="width:315px;height:67px" alt="Unad"> </span>
+    <!-- Demo purpose only: goes with demo.js, you can delete this css when designing your own WebApp -->
+    <link rel="stylesheet" type="text/css" media="screen" href="css/demo.css">
 
-				<!-- END AJAX-DROPDOWN -->
-			</div>
+    <!-- FAVICONS -->
+    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
 
-		</header>
+    <!-- GOOGLE FONT
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,400,700">-->
 
-		<div id="main" role="main">
+</head>
+<body id="login" class="animated fadeInDown">
+<!-- possible classes: minified, no-right-panel, fixed-ribbon, fixed-header, fixed-width-->
+<header id="header">
+    <!--<span id="logo"></span>-->
 
-			<!-- MAIN CONTENT -->
-			<div id="content" class="container">
+    <div id="logo-group">
+        <span id="logo"> <img src="img/logoUNAD.png" style="width:315px;height:67px" alt="Unad"> </span>
 
-                <div class="row">
-                {% if error %}   
+        <!-- END AJAX-DROPDOWN -->
+    </div>
+
+</header>
+
+<div id="main" role="main">
+
+    <!-- MAIN CONTENT -->
+    <div id="content" class="container">
+
+        <div class="row">
+            {% if error %}
                 <div class="alert alert-warning fade in">
-                <a class="close" data-dismiss="alert" href="#">×</a>
-                <h4 class="alert-heading">Error de ingreso desde intranet (Credenciales del Sistema Único de Autenticación)</h4>
-                <h5>El número de identificación:  "{{last_username}}" no corresponde a un número valido para ingreso al MED desde Intranet esto puede suceder por: </h5>
-           
+                    <a class="close" data-dismiss="alert" href="#">×</a>
+                    <h4 class="alert-heading">Error de ingreso desde intranet (Credenciales del Sistema Único de
+                        Autenticación)</h4>
+                    <h5>El número de identificación: "{{ last_username }}" no corresponde a un número valido para
+                        ingreso al MED desde Intranet esto puede suceder por: </h5>
+
                     <br>
-                 <h4>1. Usted recibio una contraseña de ingreso directo y esta intentando ingresar desde intranet, puede usar la misma (la encuentra en sus correos recibidos: "Contraseña del Módulo MED para") o  puede generar una nueva como se indica a continuación.<br>
-                2. La configuración del Sistema Único de Autenticación no es valido.</h4>
+                    <h4>
+                        2. La configuración del Sistema Único de Autenticación no es valido.</h4>
                     <br>
-                  <h5>
-                   Solicitar clave de ingreso directo al Módulo de evaluación Docente MED:
-                   <br>
-                    <a href="http://med.unad.edu.co/getpass">http://med.unad.edu.co/getpass</a>
-            
-                  </h5>
-            
+                    <h5>
+					Por favor escriba un correo a soporte.med@unad.edu.co
+                    </h5>
+
                 </div>
-                {%endif%}
-                                    
-                <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 hidden-xs hidden-sm">
-						<h1 class="txt-color-orangeDark login-header-big">MED Módulo de Evaluación Docente</h1>
-						<div class="hero">
+            {% endif %}
 
-							<div class="pull-left login-desc-box-l">
-								<h4 class="paragraph-header">IMPORTANTE: Esta ventana es para el ingreso únicamente con contraseña MED, si no tiene esta contraseña debe autenticarse utilizando las credenciales del sistema único de autenticación (Intranet).</h4>
-							
-                                                                <div class="login-app-icons">
-                                                            <a href="http://med.unad.edu.co" class="btn btn-primary">Autenticarse</a>
-                                                                </div>
-                                                        </div>
-                                                  
-						</div>     
-					</div>
-                                                {% if error %}
-                                                <center>        
-                                                <div class="mserror">{{ error.message=='Bad credentials.' ? 'Este usuario no tiene acceso' : error.message }}</div>
-                                                </center>
-                                                {% endif %}
-					<div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
-						<div class="well no-padding">
-                                                         <form action="{{ path('login_check') }}" method="post" id="login-form" class="smart-form client-form">   
-								<header>
-									Iniciar Sesión (Con Contraseña MED)</header>
+            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 hidden-xs hidden-sm">
+                <h1 class="txt-color-orangeDark login-header-big">MED Módulo de Evaluación Docente</h1>
+                <div class="hero">
 
-								<fieldset>
-									
-									<section>
-										<label class="label">Usuario</label>
-										<label class="input"> <i class="icon-append fa fa-user"></i>
-                                                                                        <input id="username" type="text" name="_username" value="{{ last_username }}" class="login"/>
-											<b class="tooltip tooltip-top-right"><i class="fa fa-user txt-color-teal"></i> Ingrese su usuario</b></label>
-     
-									</section>
+                    <div class="pull-left login-desc-box-l">
+                        <h4 class="paragraph-header">IMPORTANTE: Esta ventana es para el ingreso únicamente con
+                            contraseña MED, si no tiene esta contraseña debe autenticarse utilizando las credenciales
+                            del sistema único de autenticación (Intranet).</h4>
 
-									<section>
-										<label class="label">Contraseña</label>
-										<label class="input"> <i class="icon-append fa fa-lock"></i>
-                                                                                        <input id="password" type="password" name="_password" class="login"/>
-											<b class="tooltip tooltip-top-right"><i class="fa fa-lock txt-color-teal"></i> Ingrese su contraseña</b> </label>
-									</section>
-								</fieldset>
-								<footer>
-									<button type="submit" name="login" class="btn btn-primary">
-										Entrar
-									</button>
-								</footer>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
+                        <div class="login-app-icons">
+                            <a href="http://med.unad.edu.co" class="btn btn-primary">Autenticarse</a>
+                        </div>
+                    </div>
 
-		</div>
+                </div>
+            </div>
+            {% if error %}
+                <center>
+                    <div class="mserror">{{ error.message=='Bad credentials.' ? 'Este usuario no tiene acceso' : error.message }}</div>
+                </center>
+            {% endif %}
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
+                <div class="well no-padding">
+                    <form action="{{ path('login_check') }}" method="post" id="login-form"
+                          class="smart-form client-form">
+                        <header>
+                            Iniciar Sesión (Con Contraseña MED)
+                        </header>
 
-		<!--================================================== -->	
+                        <fieldset>
 
-		<!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
-		<script src="js/plugin/pace/pace.min.js"></script>
+                            <section>
+                                <label class="label">Usuario</label>
+                                <label class="input"> <i class="icon-append fa fa-user"></i>
+                                    <input id="username" type="text" name="_username" value="{{ last_username }}"
+                                           class="login"/>
+                                    <b class="tooltip tooltip-top-right"><i class="fa fa-user txt-color-teal"></i>
+                                        Ingrese su usuario</b></label>
 
-	    <!-- Link to Google CDN's jQuery + jQueryUI; fall back to local -->
-		<script src="{{ asset('js/libs/jquery-2.0.2.min.js') }}"></script>
-		<script src="{{ asset('js/libs/jquery-ui-1.10.3.min.js') }}"></script>
+                            </section>
 
-		<!-- JS TOUCH : include this plugin for mobile drag / drop touch events 		
-		<script src="js/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script> -->
+                            <section>
+                                <label class="label">Contraseña</label>
+                                <label class="input"> <i class="icon-append fa fa-lock"></i>
+                                    <input id="password" type="password" name="_password" class="login"/>
+                                    <b class="tooltip tooltip-top-right"><i class="fa fa-lock txt-color-teal"></i>
+                                        Ingrese su contraseña</b> </label>
+                            </section>
+                        </fieldset>
+                        <footer>
+                            <button type="submit" name="login" class="btn btn-primary">
+                                Entrar
+                            </button>
+                        </footer>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-		<!-- BOOTSTRAP JS -->		
-		<script src="js/bootstrap/bootstrap.min.js"></script>
+</div>
 
-		<!-- CUSTOM NOTIFICATION -->
-		<script src="js/notification/SmartNotification.min.js"></script>
+<!--================================================== -->
 
-		<!-- JARVIS WIDGETS -->
-		<script src="js/smartwidgets/jarvis.widget.min.js"></script>
-		
-		<!-- EASY PIE CHARTS -->
-		<script src="js/plugin/easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
-		
-		<!-- SPARKLINES -->
-		<script src="js/plugin/sparkline/jquery.sparkline.min.js"></script>
-		
-		<!-- JQUERY VALIDATE -->
-		<script src="js/plugin/jquery-validate/jquery.validate.min.js"></script>
-		
-		<!-- JQUERY MASKED INPUT -->
-		<script src="js/plugin/masked-input/jquery.maskedinput.min.js"></script>
-		
-		<!-- JQUERY SELECT2 INPUT -->
-		<script src="js/plugin/select2/select2.min.js"></script>
+<!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
+<script src="js/plugin/pace/pace.min.js"></script>
 
-		<!-- JQUERY UI + Bootstrap Slider -->
-		<script src="js/plugin/bootstrap-slider/bootstrap-slider.min.js"></script>
-		
-		<!-- browser msie issue fix -->
-		<script src="js/plugin/msie-fix/jquery.mb.browser.min.js"></script>
-		
-		<!-- FastClick: For mobile devices -->
-		<script src="js/plugin/fastclick/fastclick.js"></script>
-		
-		<!--[if IE 7]>
-			
-			<h1>Your browser is out of date, please update your browser by going to www.microsoft.com/download</h1>
-			
-		<![endif]-->
+<!-- Link to Google CDN's jQuery + jQueryUI; fall back to local -->
+<script src="{{ asset('js/libs/jquery-2.0.2.min.js') }}"></script>
+<script src="{{ asset('js/libs/jquery-ui-1.10.3.min.js') }}"></script>
 
-		<!-- MAIN APP JS FILE -->
-		<script src="js/app.js"></script>
+<!-- JS TOUCH : include this plugin for mobile drag / drop touch events
+<script src="js/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script> -->
 
-		<script type="text/javascript">
-			runAllForms();
+<!-- BOOTSTRAP JS -->
+<script src="js/bootstrap/bootstrap.min.js"></script>
 
-			$(function() {
-				// Validation
-				$("#login-form").validate({
-					// Rules for form validation
-					rules : {
-						email : {
-							required : true,
-							email : false
-						},
-						password : {
-							required : true,
-							minlength : 3,
-							maxlength : 20
-						}
-					},
+<!-- CUSTOM NOTIFICATION -->
+<script src="js/notification/SmartNotification.min.js"></script>
 
-					// Messages for form validation
-					messages : {
-						email : {
-							required : 'Please enter your email address',
-							email : 'Please enter a VALID email address'
-						},
-						password : {
-							required : 'Please enter your password'
-						}
-					},
+<!-- JARVIS WIDGETS -->
+<script src="js/smartwidgets/jarvis.widget.min.js"></script>
 
-					// Do not change code below
-					errorPlacement : function(error, element) {
-						error.insertAfter(element.parent());
-					}
-				});
-			});
-		</script>
+<!-- EASY PIE CHARTS -->
+<script src="js/plugin/easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
 
-	</body>
+<!-- SPARKLINES -->
+<script src="js/plugin/sparkline/jquery.sparkline.min.js"></script>
+
+<!-- JQUERY VALIDATE -->
+<script src="js/plugin/jquery-validate/jquery.validate.min.js"></script>
+
+<!-- JQUERY MASKED INPUT -->
+<script src="js/plugin/masked-input/jquery.maskedinput.min.js"></script>
+
+<!-- JQUERY SELECT2 INPUT -->
+<script src="js/plugin/select2/select2.min.js"></script>
+
+<!-- JQUERY UI + Bootstrap Slider -->
+<script src="js/plugin/bootstrap-slider/bootstrap-slider.min.js"></script>
+
+<!-- browser msie issue fix -->
+<script src="js/plugin/msie-fix/jquery.mb.browser.min.js"></script>
+
+<!-- FastClick: For mobile devices -->
+<script src="js/plugin/fastclick/fastclick.js"></script>
+
+<!--[if IE 7]>
+
+<h1>Your browser is out of date, please update your browser by going to www.microsoft.com/download</h1>
+
+<![endif]-->
+
+<!-- MAIN APP JS FILE -->
+<script src="js/app.js"></script>
+
+<script type="text/javascript">
+    runAllForms();
+
+    $(function () {
+        // Validation
+        $("#login-form").validate({
+            // Rules for form validation
+            rules: {
+                email: {
+                    required: true,
+                    email: false
+                },
+                password: {
+                    required: true,
+                    minlength: 3,
+                    maxlength: 20
+                }
+            },
+
+            // Messages for form validation
+            messages: {
+                email: {
+                    required: 'Please enter your email address',
+                    email: 'Please enter a VALID email address'
+                },
+                password: {
+                    required: 'Please enter your password'
+                }
+            },
+
+            // Do not change code below
+            errorPlacement: function (error, element) {
+                error.insertAfter(element.parent());
+            }
+        });
+    });
+</script>
+
+</body>
 </html>
