mostrar asignación de cursos

--- a/templates/Docente/show.html.twig
+++ b/templates/Docente/show.html.twig
@@ -13,7 +13,7 @@
         </ul>
     {% endif %}
 
-    <h4>Instrumentos de Evaluación</h4>
+    <h4>Instrumentos de evaluación</h4>
     <table class="table table-bordered hidden-mobile" style="width: 95%">
         <tr>
             <th>Instrumento</th>
@@ -286,11 +286,7 @@
                             agregar un tutor requiere únicamente el número de cedula.
                         </li>
                         <li>
-                            Si usted fue director de curso y este no aparece en la lista por favor solicite el ajuste
-                            enviando un correo a siga@unad.edu.co especificando:
-                            Nombre del Curso
-                            Código
-                            Periodo Acádemico.
+                            Si usted fue director de curso un y no esta relacionado por favor solicite a líder de programa que lo asigne como director del curso.
                         </li>
                     </ul>
                 </div>
