update home lincs

--- a/templates/Default/home.html.twig
+++ b/templates/Default/home.html.twig
@@ -129,8 +129,8 @@
                         soporte.tecnico@unad.edu.co
                     </h4>
                     <br>
-                    <a href="http://med.unad.edu.co/archivo/recuperacion-credenciales-acceso.pdf" target="new">Instructivo
-                        de Recuperación de Credenciales de Acceso <i class="fa fa-download"></i></a>
+                    <a href="http://med.unad.edu.co/archivo/instructivo-acceso-intranet.pdf" target="new">Instructivo
+                        de Acceso a la Intranet UNAD <i class="fa fa-download"></i></a>
                 </td>
             </tr>
             <tr>
