add no aplica on confirm

--- a/templates/Plangestion/conf.html.twig
+++ b/templates/Plangestion/conf.html.twig
@@ -18,7 +18,7 @@
             <td colspan="2">
                 <h5>Apreciado Docente Ocasional y Hora Cátedra:</h5>
                 <ul>
-                    <li>Los roles registrados para autoevaluación son suministradados por Talento Humano (SOCA).</li>
+                    <li>Los roles registrados para autoevaluación son suministrados por Talento Humano (SOCA), si alguno de los roles asignados diferentes a tutor o director no fue realizado confirme su asignación y luego seleccione la opción "No aplica" al autoevaluar ese rol.</li>
                     <li>Los roles de formación (Tutor / Director de Curso) que no apararezcan en este registro y usted
                         desempeño puede agregarlos con el bóton "Agregar".
                     </li>
