--- a/templates/Default/home.html.twig
+++ b/templates/Default/home.html.twig
@@ -173,7 +173,7 @@
                     <i class="fa-fw fa fa-warning"></i>
                     <strong>Advertencia!</strong>{{ ucount }} No se encontro el numero de cédula: {{ cedula_usuario }}
                     en el sistema, si considera que extiste alguna inconsistencia por favor escriba a
-                    omar.rodriguez@unad.edu.co
+                    soporte.med@unad.edu.co
                 </div>
             {% endif %}
         </table>
